--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,15 @@
 
 :root {
   --text-color: #1e1e1e;
-  --main-color: #ff6c24;
+  --main-color: #1e1e1e;
   --secondary-color: #ffffff;
   --secondary-burnt-color: #fffffff0;
-  --main-transparent-color: #0f645b1c;
-  --secondary-transparent-color: #ffffff1c;
-  --accent-color: #f9c838;
+  --main-transparent-color: #ff6c241c;
+  --secondary-transparent-color: #ff6c241c;
+  --accent-color: #ff6c24;
   --main-font-family: 'Gilroy', sans-serif;
   --title-font-family: 'Gilroy Bold', sans-serif;
-  --secondary-font-family: 'Caveat', cursive;
+  --secondary-font-family: 'Gilroy Medium Italic', cursive;
   --animation-global: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
